--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "TOKEN", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "7494334299:AAEdfif9zAsFvppjUWB_jMNNS3GWx_jdR8E, "admin_ids": ["4252127720"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"4252127720": 8769900}}
